# vcpkg-versioning-example

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  vcpkg.json
.devcontainer/: devcontainer.json
apps/: main.cpp
scripts/: data.json  produce.py
